# amazon-bedrock-temporal-samples

./: .gitignore  README.md
finance-personal-assistant/: README.md  lab3-deploy_agents_on_amazon_bedrock_agentcore.ipynb
finance-personal-assistant/temporal/: budget_agent_activity.py  financial_analysis_activity.py  financial_assistant_workflow.py  hello_world_temporal.py  llm_activity.py  models.py  pf.rules  pyproject.toml  start_workflow.py  worker.py
finance-personal-assistant/utils/: agentcore_utils.py
